<resources>
    <string name="app_name">VG聊天</string>
    <string name="vege_motto_0">与聊得来的人分享精彩世界</string>
    <string name="noMessageTips">点击按钮开始发送消息吧~</string>
    <string name="contact">通讯录</string>
    <string name="start_conversation">开始对讲</string>
    <string name="note_conversation">备注</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="login_info_hint">登录(VG号或用户名)</string>
    <string name="password_hint">密码</string>
    <string name="no_account">注册新账号</string>
    <string name="sign_in">登陆</string>
    <string name="no_conversation">对话不存在</string>
    <string name="invalidate_user_data">用户数据有误,请重新登录</string>
    <string name="vessage_sended">已发送</string>
    <string name="change_avatar">更换头像</string>
    <string name="change_nick">修改昵称</string>
    <string name="change_chat_bcg">聊天背景</string>
    <string name="change_password">修改密码</string>
    <string name="change_mobile">绑定手机</string>
    <string name="logout">退出账号</string>
    <string name="account">VG号</string>
    <string name="registration">注册</string>
    <string name="register_info_hint">注册(用户名为2到18位中英文数字)</string>
    <string name="register_password_hint">密码(6到18个字符)</string>
    <string name="username_test_hint">用户名为2到18位中英文数字</string>
    <string name="password_test_hint">密码为6到18个字符</string>
    <string name="sign_up">注册</string>
    <string name="has_account">已有账号</string>
    <string name="VALIDATE_DATA_ERROR">数据有误</string>
    <string name="NETWORK_ERROR">网络错误</string>
    <string name="NOT_LOGIN">没有登录</string>
    <string name="LOGOUTED">已经注销</string>
    <string name="OTHER_DEVICE_HAD_LOGIN">另一设备使用相同账号登陆，本设备将注销登陆</string>
    <string name="VALIDATE_ACCTOKEN_FAILED">验证Token失败</string>
    <string name="NO_MORE_MESSAGE">没有更多消息了</string>
    <string name="SEND_WHITE_SPACE_ERROR">不能发送空白字符</string>
    <string name="CONNECTING">连接中</string>
    <string name="CONNECTED">已连接</string>
    <string name="CONNECT_ERROR">网络错误</string>
    <string name="CHICAGO_VALIDATE_FAILED">服务器验证错误!</string>
    <string name="CONNECT_ERROR_TAP_RETRY">网络错误，点我重试!</string>
    <string name="REGIST_FAILED">注册失败</string>
    <string name="REGIST_SUC">注册成功</string>
    <string name="DATA_ERROR">数据有误</string>
    <string name="USER_NAME_EXISTS">用户名已存在，更换用户名或直接登录</string>
    <string name="ALLOC_TOKEN_FAILED">Token服务器错误</string>
    <string name="NO_APP_INSTANCE">App服务器错误</string>
    <string name="VALIDATE_INFO_INVALID">非法登录数据</string>
    <string name="VALIDATE_FAILED">用户不存在或密码错误</string>
    <string name="get_sms">获取验证码</string>
    <string name="invalid_mobile">手机号码格式错误</string>
    <string name="confirm_send_sms_format">确定向%1$s %2$s发送验证码短信？</string>
    <string name="ok">好</string>
    <string name="reget_sms">重新获取验证码</string>
    <string name="validate_sms">验证</string>
    <string name="validate_sms_code">验证码</string>
    <string name="validate_sms_mobile">验证手机</string>
    <string name="cancel">取消</string>
    <string name="validate_sms_code_fail">验证码验证不成功</string>
    <string name="need_validate_mobile">绑定你的手机</string>
    <string name="validate_mobile_msg">向未注册的手机号发出对讲，好友注册绑定该手机后也可以收到你的消息</string>
    <string name="exchange_account">更换账号</string>
    <string name="change_mobile_suc">修改手机号成功</string>
    <string name="change_mobile_cancel">取消</string>
    <string name="change_nick_suc">修改昵称成功</string>
    <string name="origin_password_hint">原密码</string>
    <string name="new_password_hint">新密码(6到18个字符)</string>
    <string name="origin_password_error_format">原密码不正确</string>
    <string name="new_password_error_format">新密码格式不正确</string>
    <string name="change_password_suc">修改密码成功</string>
    <string name="TOKEN_UNAUTHORIZED">Token验证失败</string>
    <string name="CHANGE_PASSWORD_SUCCESS">密码修改成功!</string>
    <string name="CHANGE_PASSWORD_ERROR">密码修改失败, 请检查旧密码是否正确.</string>
    <string name="change_nick_fail">修改昵称出错</string>
    <string name="nick_cant_null">昵称不能为空</string>
    <string name="same_nick">相同的昵称</string>
    <string name="start_record_error">启动对讲出错</string>
    <string name="ask_send_vessage">发送对讲消息给好友？</string>
    <string name="face_tips">示例</string>
    <string name="need_upload_chat_bcg_title">请设置你的视频对讲背景</string>
    <string name="jump_set_chat_bcg">跳过这一步</string>
    <string name="need_upload_chat_bcg_msg">对讲背景会在视频对讲时展示给你的好友~~</string>
    <string name="no_file">文件不存在</string>
    <string name="upload_chat_bcg_suc">设置成功！</string>
    <string name="upload_chat_bcg_fail">设置失败</string>
    <string name="wait_sms_tips_format">重新获取验证码(%1$s秒)</string>
    <string name="input_validate_code">请输入验证码</string>
    <string name="invalid_sms_code">验证码格式不正确</string>
    <string name="password_same">原密码与新密码相同</string>
    <string name="other_device_logon">其他设备登陆，本设备将注销登陆</string>
    <string name="ask_jump_vessage">跳过未读消息？</string>
    <string name="jump_vessage_will_delete">跳过的消息退出当前对话后将会被删除</string>
    <string name="jump">跳过</string>
    <string name="cancel_jump">不跳过</string>
    <string name="chatter_not_has_bcg">对方还没设置对讲背景</string>
    <string name="notify_friend_sms_body">我发送了一条视频消息给你，赶快下载VG对讲机查看吧!</string>
    <string name="ask_send_notify_sms">对方没玩VG对讲机，发送一条消息通知Ta吧？</string>
    <string name="new_msg">你收到了一条新消息</string>
    <string name="new_msg_from">%1$s 发送了一条消息</string>
    <string name="mobile_user">手机用户</string>
    <string name="not_bind_mobile">未绑定</string>
    <string name="new_app_version_found">发现新版本，现在去下载？</string>
    <string name="no_face_detected">请露脸~~</string>
    <string name="take_picture_from_camera_fail">拍照失败</string>
    <string name="new_intersting">奇趣</string>
    <string name="user_setting">我的设置</string>
    <string name="title_activity_user_settings">Settings</string>
    <string name="feedback">建议与反馈</string>
    <string name="vote_me_up">评价</string>
    <string name="feedback_mail_subject">VG 反馈</string>
    <string name="feedback_mail_content">请给出您的意见与建议，以便我们更好地改进服务。</string>
    <string name="clear">清空</string>
    <string name="search_user_near_user">查找好友、附近的人</string>
    <string name="conversation_query_hint">搜索VG号或手机</string>
    <string name="extra_activity_updated">奇趣活动有更新</string>
    <string name="confirm">确定</string>
    <string name="yes">是</string>
    <string name="load_extra_activity_config_error">加载周边服务失败</string>
    <string name="init_user_data_error">初始化用户数据出错，请检查网络</string>
    <string name="user_data_not_ready">用户数据没有准备好</string>
    <string name="check_app_update">检查更新</string>
    <string name="app_is_new_version">当前已经是最新版本</string>
    <string name="unknow_vg_user">佚名</string>
    <string name="no_user_selected">还没有选中任何用户！</string>
    <string name="x_days_ago">%1$s天前</string>
    <string name="x_hours_ago">%1$s小时前</string>
    <string name="x_minutes_ago">%1$s分钟前</string>
    <string name="just_now">刚刚</string>
    <string name="avatar">头像</string>
    <string name="nick">昵称</string>
    <string name="video_chat_image">视频大头贴</string>
    <string name="mobile">手机</string>
    <string name="logout_hint">确定退出该账号？</string>
    <string name="take_picture">拍照</string>
    <string name="select_picture">选择照片</string>
    <string name="upload_avatar_fail">上传头像出错</string>
    <string name="save_avatar_error">保存头像文件出错</string>
    <string name="upload_avatar_suc">头像已更新</string>
    <string name="no_sd_card">未找到存储卡，无法存储照片！</string>
    <string name="insert_sd_card">请插入sd卡</string>
    <string name="vsg_readed">已读</string>
    <string name="vsg_unreaded">未读</string>
    <string name="not_found_activity_class_name">没有找到插件</string>
    <string name="select_face_tips">选择照片</string>
    <string name="read_image_error">读取图片错误</string>
    <string name="save_image_error">保存图像错误</string>
    <string name="tell_friends">告诉好友</string>
    <string name="wechat_session">微信好友</string>
    <string name="wechat_timeline">微信朋友圈</string>
    <string name="tell_friends_vege_msg">我在用不聊消失的VG聊天！这是我的VG号，一般人我不告诉Ta~</string>
    <string name="tell_friends_fun_msg">我在用VG聊天，一个无关系链束缚的社交网络，你要加入吗?</string>
    <string name="my_vg_id_x">我的VG号:%1$s</string>
    <string name="tell_friends_alert_msg">邀请更多聊得来的好友加入VG</string>
    <string name="wxapi_not_ready">微信没有初始化</string>
    <string name="jump_weixin">正在打开微信</string>
    <string name="ask_remove_conversation">移除该对话？</string>
    <string name="remove">移除</string>
    <string name="remove_conversation_fail"><![CDATA[移除对话出现错误>_<]]></string>
    <string name="no_such_user">没有在VG上找到该用户. . .</string>
    <string name="no_such_mobile_user">没找到绑定该手机的用户</string>
    <string name="select_mobile">选择手机联系人</string>
    <string name="cant_select_self">不能选择自己！！</string>
    <string name="tell_friends_alert_msg_no_regist">好友没玩VG对讲机，发一条消息告诉Ta吧~</string>
    <string name="network_error">网络错误</string>
    <string name="no_mobile_found">没找到手机号</string>
    <string name="continue_on">继续</string>
    <string name="welcome_alert_title">和好友开始聊天</string>
    <string name="welcome_alert_msg">给未注册的手机好友发消息，好友注册后也能收到消息！</string>
    <string name="select_near">附近的人</string>
    <string name="near_users">附近的人</string>
    <string name="select_active_users">选择活跃的用户</string>
    <string name="active_users">活跃的用户</string>
    <string name="little_paper_tell_friend_alert_title">邀请Ta一起来玩小纸条吧~</string>
    <string name="sending_vessage">正在传送</string>
    <string name="send_vessage_failure">发送出错</string>
    <string name="invite_alert_title">告诉好朋友</string>
    <string name="invite_alert_msg">请至少邀请一个好朋友加入VG才好玩!</string>
    <string name="start_group_chat">新建小群组</string>
    <string name="open_mobile_conversation">手机联系人</string>
    <string name="new_group">新群组</string>
    <string name="no_chat_group_found">找不到群组</string>
    <string name="start_group_conversation">新建小群组</string>
    <string name="please_at_list_two_user">请至少选择2位好友</string>
    <string name="create_chat_group_fail">创建群组失败，请稍后再试</string>
    <string name="new_group_name_format">%1$s 等%2$d人群组</string>
    <string name="nameless_conversation">未命名对话</string>
    <string name="group_profile">群组</string>
    <string name="exit_chat_group">退出群组</string>
    <string name="quit_chat_group_error">退出群组错误，请稍后再试</string>
    <string name="u_not_in_group">你已退出群组</string>
    <string name="ask_exit_chat_group_title">确定退出该群组吗？</string>
    <string name="no">否</string>
    <string name="unknow_vsg_type"><![CDATA[未知的消息类型>_<!]]></string>
    <string name="pin">Pin</string>
    <string name="unpin">移除Pin</string>
    <string name="x_conversation_timeup">%1$d 个对话不聊消失</string>
    <string name="login_vg">登录</string>
    <string name="read_config_error">读取配置文件失败</string>
    <string name="send">发送</string>
    <string name="msg_hint">对Ta说......</string>
    <string name="noChatterId">没有发送用户</string>
    <string name="sendDataError">准备数据错误</string>
    <string name="no_text_message"><![CDATA[不能发送空消息>_<]]></string>
    <string name="no_chat_image_selected">选择你的大头贴吧~~</string>
    <string name="setup_chat_images_first">请先设定好聊天大头贴,Go!</string>
    <string name="my_chat_image">我的大头贴</string>
    <string name="no_more_vessages"><![CDATA[后面没有消息了>_<]]></string>
    <string name="search_limited">一分钟只能在线查找3个用户</string>
    <string name="my_face_chat_images">我的聊天大头贴</string>
    <string name="x_vol">音量:%1$d</string>
    <string name="x_pin_limit">最多可Pin %d 人</string>
    <string name="pin_error">Pin对话出错</string>
    <string name="vsg_type_little_video">小视频</string>
    <string name="vsg_type_photo">图片</string>
    <string name="select_image_source">选择图片来源</string>
    <string name="img_from_camera">拍摄照片</string>
    <string name="img_from_album">来自图库</string>
    <string name="image_vessage_comming_soon"><![CDATA[发送图片功能正在开发中>_<]]></string>
    <string name="no_not_read_vessages">没有未读消息~</string>
    <string name="no_previous_vessages">前面没有消息了~</string>
    <string name="vsg_type_photo_album">图片</string>
    <string name="vsg_type_photo_camera">拍照</string>
    <string name="mutil_conversation">多人同时聊天</string>
    <string name="nav_subscription_account_title">订阅分享号</string>
</resources>