<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".account.ValidateMobileActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mobile_container">
        <LinearLayout
            android:id="@+id/mobile_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:text="+86"/>
            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:inputType="phone"
                android:textSize="10pt"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/mobile_text_container"
            android:text="@string/get_sms"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/validate_sms_code_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/et_sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_sms_code"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_reget_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reget_sms" />
            <Button
                android:id="@+id/btn_validate_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate_sms"
                android:hint="@string/validate_sms_code"/>
        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
