<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/app_theme"
    tools:context="cn.bahamut.vessage.account.SignUpActivity">

    <Button
        android:id="@+id/btn_has_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="#00000000"
        android:textSize="8pt"
        android:textColor="@android:color/white"
        android:text="@string/has_account"
        style="@style/Base.Widget.AppCompat.Button.Borderless" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationY="-42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:hint="@string/register_info_hint"
            android:textAlignment="center" />

        <!--<TextView-->
            <!--android:id="@+id/tv_app_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="23dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_above="@id/et_username"-->
            <!--android:text="@string/registration"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="8pt"-->
            <!--android:focusableInTouchMode="false" />-->

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/launch_screen_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            android:layout_above="@id/et_username"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_password"
            android:background="@mipmap/next_round"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_alignBottom="@id/btn_sign_up"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:hint="@string/register_password_hint"
            android:textAlignment="center"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:layout_below="@id/et_username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</RelativeLayout>
